-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
13
-
a07a90509 (dev), 1e24e022e (6.8)
-
Foundation Sprint 108, Foundation Sprint 109
It appears to me that our deadline cancellation is not correct:
auto stream = std::make_shared<QGrpcServerStream>(channelOperation); if (auto deadline = deadlineForCall(dPtr->channelOptions, channelOperation->options())) QTimer::singleShot(*deadline, stream.get(), &QGrpcServerStream::cancel);
A deadline should only cancel until the point in time where no server response got delivered.
- is required for
-
QTBUG-129161 Various enhancements in Qt gRPC and Protobuf
-
- In Progress
-
For Gerrit Dashboard: QTBUG-125375 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
561812,23 | Fix stream cancellation and the deadline timeout | dev | qt/qtgrpc | Status: MERGED | +2 | 0 |
565769,2 | Fix stream cancellation and the deadline timeout | 6.8 | qt/qtgrpc | Status: MERGED | +2 | 0 |