src/grpc/qabstractgrpcchannel.cpp
@@ -91,16 +91,6 @@ QT_BEGIN_NAMESPACE
     thread where the function was called.
 */
 
-static std::optional<QGrpcDuration>
-deadlineForCall(const QGrpcChannelOptions &channelOptions, const QGrpcCallOptions &callOptions)
-{
-    if (callOptions.deadline())
-        return *callOptions.deadline();
-    if (channelOptions.deadline())
-        return *channelOptions.deadline();
-    return std::nullopt;
-}
-
 QAbstractGrpcChannel::QAbstractGrpcChannel()
     : dPtr(std::make_unique<QAbstractGrpcChannelPrivate>(QGrpcChannelOptions{}))
 {
@@ -150,9 +140,6 @@ std::shared_ptr<QGrpcCallReply> QAbstractGrpcChannel::call(QLatin1StringView met
     auto reply = std::make_shared<QGrpcCallReply>(channelOperation);
     call(channelOperation);
 
-    if (auto deadline = deadlineForCall(dPtr->channelOptions, channelOperation->callOptions()))
-        QTimer::singleShot(*deadline, reply.get(), &QGrpcCallReply::cancel);
-
     return reply;
 }
 
@@ -184,9 +171,6 @@ QAbstractGrpcChannel::startServerStream(QLatin1StringView method, QLatin1StringV
     auto stream = std::make_shared<QGrpcServerStream>(channelOperation);
     startServerStream(channelOperation);
 
-    if (auto deadline = deadlineForCall(dPtr->channelOptions, channelOperation->callOptions()))
-        QTimer::singleShot(*deadline, stream.get(), &QGrpcServerStream::cancel);
-
     return stream;
 }
 
@@ -210,9 +194,6 @@ QAbstractGrpcChannel::startClientStream(QLatin1StringView method, QLatin1StringV
     auto stream = std::make_shared<QGrpcClientStream>(channelOperation);
     startClientStream(channelOperation);
 
-    if (auto deadline = deadlineForCall(dPtr->channelOptions, channelOperation->callOptions()))
-        QTimer::singleShot(*deadline, stream.get(), &QGrpcClientStream::cancel);
-
     return stream;
 }
 
@@ -235,9 +216,6 @@ QAbstractGrpcChannel::startBidirStream(QLatin1StringView method, QLatin1StringVi
 
     auto stream = std::make_shared<QGrpcBidirStream>(channelOperation);
     startBidirStream(channelOperation);
-
-    if (auto deadline = deadlineForCall(dPtr->channelOptions, channelOperation->callOptions()))
-        QTimer::singleShot(*deadline, stream.get(), &QGrpcBidirStream::cancel);
 
     return stream;
 }
